--- a/code/html/hello_world.html
+++ b/code/html/hello_world.html
@@ -1,6 +1,6 @@
 <html>
 <header><title>This is title</title></header>
 <body>
-Hello world
+<font size=30 color="red">Hey! <\font>
 </body>
 </html>
